--- a/app/components/header/header.module.css
+++ b/app/components/header/header.module.css
@@ -4,16 +4,17 @@
   grid-template-areas:
     'logo'
     'nav';
-  height: 100px;
-  padding: 20px;
+  min-height: 130px;
+  padding: 0 20px 20px 20px;
   position: fixed;
-  width: 100%;
   z-index: 200;
+  width: calc(100% - 40px - 10px);
+  box-shadow: 0px 0.5px 5px darkred;
 }
 
 .logo {
   grid-area: logo;
-  padding-bottom: 10px;
+  padding: 20px 0 20px;
 }
 
 .nav {
@@ -23,11 +24,11 @@
     'greeting signout favorites';
   grid-template-columns: auto auto auto;
   height: 30px;
+  align-items: end;
 }
 
 .greeting {
   grid-area: greeting;
-  align-self: baseline;
 }
 
 .username {
@@ -53,11 +54,12 @@
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   .header {
-    background-color: pink;
     grid-template-areas:
       'logo nav';
-    grid-template-columns: 70% 30%;
-    height: 50px;
+    grid-template-columns: 70% auto;
+    background-color: pink;
+    padding-bottom: 10px;
+    min-height: 140px;
   }
 
   .nav {
@@ -65,12 +67,21 @@
       'greeting'
       'signout'
       'favorites';
+    grid-template-columns: auto;
+    padding-top: 20px;
+  }
+
+  .greeting {
     text-align: right;
-    grid-template-columns: auto auto auto;
+    padding-bottom: 20px;
   }
 
   .nav button {
     text-align: right;
+  }
+
+  .signout {
+    margin-bottom: 5px;
   }
 }
 
