--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,8 @@
 body {
   font-family: 'WeGoSansRegular', sans-serif;
   margin: auto;
+  padding: 0 5px;
+  background-color: whitesmoke;
 }
 
 h1, h2, h3 {
